--- a/EIP-Standards/EIP-712.md
+++ b/EIP-Standards/EIP-712.md
@@ -3,4 +3,15 @@
 
 # EIP-191 Standard
 
+- used for signing data
+- 0x19 0x00 <intended_validator> <data to sign>
+- 0x19 - the initial 0x19 byte
+
 # EIP-712 Standard
+
+- EIP-712 follows EIP-191 and then structure the signed data
+- 0x19 0x01 <domainSeparator> <hashStruct(message)>
+- We need to define
+    - EIP712Domain
+    - and EIP712Domain_TYPEHASH
+red video: https://youtu.be/HL0ruArbf3o
