--- a/EIP-Standards/EIP-712.md
+++ b/EIP-Standards/EIP-712.md
@@ -15,3 +15,9 @@
     - EIP712Domain
     - and EIP712Domain_TYPEHASH
 red video: https://youtu.be/HL0ruArbf3o
+
+## Gasless Transactions on Ethereum: A New Age? | EIP-712
+- Permit smart contracts with EIP 712
+- For better user experience for signing
+
+ref: https://youtu.be/CKbxqkefegA
